--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "react-project-library",
-  "homepage": "https://zari35.github.io/ecommerce-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,9 +20,7 @@
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
